[package]
name = "waiua_re"
version = "0.0.10"
description = "An app to get current match infos on valorant"
authors = ["letchepare"]
license = ""
repository = "https://gitlab.com/letchepare/waiua_re"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["fs-all", "http-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","default-tls"] }
tokio = { version = "1", features = ["full"] }
http-cache-reqwest = "0.10.0"
reqwest-middleware = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
